# testtool-python-pytest

./: README.md
.github/workflows/: meta-data-check.yml  pytest-build-check.yml  python-build-check.yml  python-publish.yml
django/: .pdm-python  USAGE.md  pyproject.toml  testtool.yaml
django/script/linux/: run.sh
django/src/: collector.py  converter.py  djangox.py  executor.py  main.py  prepare.py  run.py
django/tests/: test_prepare.py
django/tests/testdata/django/has_settings_dir_with_secret_key/settings/: prod.py
pytest/: CHANGELOG.md  README.md  USAGE.md  check.sh  pyproject.toml  pytest.ini  requirements.txt  testtool.yaml
pytest/script/linux/: install.sh  run.sh
pytest/src/: allure.py  case_log.py  collector.py  converter.py  executor.py  filter.py  load.py  parser.py  pytestx.py  run.py
pytest/src/pytestx/: case_log.py  collector.py  converter.py  executor.py
pytest/src/pytestx/extend/: allure_extend.py  global_cleanup_extend.py  global_extend.py  global_setup_extend.py
pytest/src/testsolar_pytestx/: case_log.py  collector.py  conftest_generator.py  converter.py  executor.py  header_injection.py  ini_fixer.py  parser.py  stream.py  util.py
pytest/src/testsolar_pytestx/extend/: allure_extend.py  coverage_extend.py
pytest/testdata/: conftest.py  coverage.xml  entry.json  normal_case.py  test_data_drive_zh_cn.py
pytest/testdata/allure_attachments/: results.json
pytest/testdata/testsolar_coverage/: .coverage_db  coverage.xml  testsolar_coverage.json
pytest/tests/: test_collector.py  test_converter.py  test_coverage.py  test_executor.py  test_load.py  test_parser.py  test_run.py  test_run_allure.py  test_util.py  test_utils.py
pytest/tests/testdata/: normal_case.py
pytest/tests/testdata/aa/bb/cc/: class_test.py
