[project]
name = "django"
version = "0.1.0"
description = "DJango Test tool for TestSolar"
authors = [
    {name = "asiazhang2002", email = "asiazhang2002@gmail.com"},
]
dependencies = [
    "testsolar-testtool-sdk>=0.1.9",
    "django>=4.2.11",
    "loguru>=0.7.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.1.1",
]
